# 21f-srch-ngn-Cry1is

./: AVLTree.h  CMakeLists.txt  DocParser.cpp  DocParser.h  Document.cpp  Document.h  QueryProcessor.cpp  QueryProcessor.h  main.cpp  tests.cpp
